--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,7 +31,7 @@
 <body>
     <header>
         <% if (!hideLayout) { %>
-            <%- include('./partials/nav.ejs') %>
+            <%- include('partials/nav') %>
         <% } %>
     </header>
     
@@ -44,7 +44,7 @@
     </aside>
 
     <% if (!hideLayout) { %>
-        <%- include('./partials/footer.ejs') %>
+        <%- include('partials/footer') %>
     <% } %>
 
 
