--- a/views/pages/admin/client.ejs
+++ b/views/pages/admin/client.ejs
@@ -84,7 +84,9 @@
                                             </a>
                                             </button>
                                             <button class="btn-edit" title="Modifier">
+                                            <a href="/update-client/<%= client.id_client %>">
                                                 <i class="fas fa-edit"></i>
+                                            </a>
                                             </button>
                                             <button class="btn-delete" title="Supprimer">
                                                 <i class="fas fa-trash"></i>
