--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -75,7 +75,7 @@
 							<li><a href="/documents" onclick="closeMobileMenu()">📁 Documents</a></li>
 							<% if (typeof user !== 'undefined' && user && user.role === 1) { %>
 								<li><a href="/listeEmployer" onclick="closeMobileMenu()">👥 Salariés</a></li>
-								<li><a href="" onclick="closeMobileMenu()">👤 Clients</a></li>
+								<li><a href="/clients" onclick="closeMobileMenu()">👤 Clients</a></li>
 							<% } %>
 						</ul>
 						<div class="mobile-menu-footer">
